Fix text vs font title overlap. Resolve #11

--- a/glyph-gazer/src/styles/main.scss
+++ b/glyph-gazer/src/styles/main.scss
@@ -99,6 +99,7 @@ p{
   font-size: 15vw;
   position: relative;
   text-align: center;
+  margin-bottom: 1rem;
 
   &::after {
     content: attr(data-fontname);
@@ -110,6 +111,8 @@ p{
     margin-top: -1rem;
     opacity: .3;
     padding: 0 2rem;
+    position: relative;
+    bottom: -1rem;
   }
 
   > * {
